added Icon and mobile first responsive

--- a/Flexbox/exercise-flex/index.html
+++ b/Flexbox/exercise-flex/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css">
 </head>
 
 <body>
@@ -67,34 +68,140 @@
         </section>
 
         <section id="how">
-        <p class="section-subtitle">SAFLOW</p>
-        <h2 class="section-title">How does it work?</h2>
+            <p class="section-subtitle">SAFLOW</p>
+            <h2 class="section-title">How does it work?</h2>
 
-        <div class="row">
-            <img src="images/group-1.png" alt="Group 1" class="row-img">
-            <div class="row-text">
-                <h3 class="title">How does it work?</h3>
-                <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, eligendi modi. Nemo sit ex vel,
-                    aliquam expedita facilis mollitia nobis rerum, atque </p>
+            <div class="row">
+                <img src="images/group-1.png" alt="Group 1" class="row-img">
+                <div class="row-text">
+                    <h3 class="title">How does it work?</h3>
+                    <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, eligendi modi. Nemo
+                        sit ex vel,
+                        aliquam expedita facilis mollitia nobis rerum, atque </p>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <img src="images/group-2.png" alt="Group 1" class="row-img">
-            <div class="row-text">
-                <h3 class="title">How does it work?</h3>
-                <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, eligendi modi. Nemo sit ex vel,
-                    aliquam expedita facilis mollitia nobis rerum, atque </p>
+            <div class="row">
+                <img src="images/group-2.png" alt="Group 1" class="row-img">
+                <div class="row-text">
+                    <h3 class="title">How does it work?</h3>
+                    <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, eligendi modi. Nemo
+                        sit ex vel,
+                        aliquam expedita facilis mollitia nobis rerum, atque </p>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <img src="images/group-3.png" alt="Group 1" class="row-img">
-            <div class="row-text">
-                <h3 class="title">How does it work?</h3>
-                <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, eligendi modi. Nemo sit ex vel,
-                    aliquam expedita facilis mollitia nobis rerum, atque </p>
+            <div class="row">
+                <img src="images/group-3.png" alt="Group 1" class="row-img">
+                <div class="row-text">
+                    <h3 class="title">How does it work?</h3>
+                    <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, eligendi modi. Nemo
+                        sit ex vel,
+                        aliquam expedita facilis mollitia nobis rerum, atque </p>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+        <section id="pricing">
+            <p class="section-subtitle">SAFLOW</p>
+            <h2 class="section-title">Pricing</h2>
+
+            <div class="plans">
+                <article class="plan">
+                    <h3 class="title">
+                        BASIC
+                        <span class="price">
+                            <span class="dollar-sign">$</span>23
+                        </span>
+                    </h3>
+                    <ul class="features" role="list">
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>7000000+ Events</span>
+                        </li>
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>7000+ Speakers</span>
+                        </li>
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>10000+ Books<span>
+                        </li>
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>1 Dedicated SSL<span>
+                        </li>
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>1 Dedicated SSL<span>
+                        </li>
+
+                    </ul>
+                    <button class="btn btn-primary">Get Started</button>
+                </article>
+                <article class="plan promo">
+                    <h3 class="title">
+                        BASIC
+                        <span class="price">
+                            <span class="dollar-sign">$</span>23
+                        </span>
+                    </h3>
+                    <ul class="features" role="list">
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>7000000+ Events</span>
+                        </li>
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>7000+ Speakers</span>
+                        </li>
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>10000+ Books<span>
+                        </li>
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>1 Dedicated SSL<span>
+                        </li>
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>1 Dedicated SSL<span>
+                        </li>
+
+                    </ul>
+                    <button class="btn btn-primary">Get Started</button>
+                </article>
+                <article class="plan">
+                    <h3 class="title">
+                        BASIC
+                        <span class="price">
+                            <span class="dollar-sign">$</span>23
+                        </span>
+                    </h3>
+                    <ul class="features" role="list">
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>7000000+ Events</span>
+                        </li>
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>7000+ Speakers</span>
+                        </li>
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>10000+ Books<span>
+                        </li>
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>1 Dedicated SSL<span>
+                        </li>
+                        <li class="feat">
+                            <i class="fas fa-check-circle"></i>
+                            <span>1 Dedicated SSL<span>
+                        </li>
+
+                    </ul>
+                    <button class="btn btn-primary">Get Started</button>
+                </article>
+            </div>
+        </section>
     </main>
 </body>
 
