--- a/Design to Code - Demo Project/Netflix/index.html
+++ b/Design to Code - Demo Project/Netflix/index.html
@@ -18,7 +18,7 @@
             Sign In
         </button>
     </header>
-
+<main>
     <section id="hero">
         <img src="assets/bg.jpg" alt="Background img" class="hero-bg">
         <div class="wrapper">
@@ -35,6 +35,7 @@
             <h3 class="desc">Only new members are eligible for this offer.</h3>
         </div>
     </section>
+</main>
 </body>
 
 </html>
