--- a/Design to Code - Demo Project/Netflix/index.html
+++ b/Design to Code - Demo Project/Netflix/index.html
@@ -18,24 +18,72 @@
             Sign In
         </button>
     </header>
-<main>
-    <section id="hero">
-        <img src="assets/bg.jpg" alt="Background img" class="hero-bg">
-        <div class="wrapper">
-            <h1 class="title">
-                Unlimited movies, TV shows, and more.
-            </h1>
-            <h2 class="subtitle">Watch anywhere. Cancel anytime.</h2>
-            <h2 class="subtitle">Ready to watch? Enter your email to create or restart your membership.</h2>
-            <form action="/submit" class="form">
-                <input type="text" placeholder="Email address">
-                <buttob class="btn">Try 30 days free</buttob>
-            </form>
+    <main>
+        <section id="hero">
+            <img src="assets/bg.jpg" alt="Background img" class="hero-bg">
+            <div class="wrapper">
+                <h1 class="title">
+                    Unlimited movies, TV shows, and more.
+                </h1>
+                <h2 class="subtitle">Watch anywhere. Cancel anytime.</h2>
+                <h2 class="subtitle">Ready to watch? Enter your email to create or restart your membership.</h2>
+                <form action="/submit" class="form">
+                    <input type="text" placeholder="Email address">
+                    <button class="btn">Try 30 days free</button>
+                </form>
 
-            <h3 class="desc">Only new members are eligible for this offer.</h3>
-        </div>
-    </section>
-</main>
+                <h3 class="desc">Only new members are eligible for this offer.</h3>
+            </div>
+        </section>
+        <section id="enjoy" class="content-section">
+            <div class="wrapper">
+            <div class="content">
+                <h2 class="title">Enjoy on your TV.</h2>
+                <p class="desc">Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.
+                </p>
+            </div>
+            <img src="assets/enjoy-tv.png" alt="Enjoy" class="img">
+
+            </div>
+        </section>
+        <section id="download" class="content-section">
+            <div class="wrapper">
+            <div class="content">
+                <h2 class="title">Download your shows to watch offline.</h2>
+                <p class="desc">Save your favorites easily and always have something to watch.
+                </p>
+            </div>
+            <img src="assets/shows.png" alt="Shows" class="img">
+            </div>
+        </section>
+        <section id="enjoy" class="content-section">
+            <div class="wrapper">
+            <div class="content">
+                <h2 class="title">Watch everywhere.</h2>
+                <p class="desc">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV without
+                    paying more.
+                </p>
+            </div>
+            <img src="assets/watch-everywhere.png" alt="Watch" class="img">
+            </div>
+        </section>
+        <section id="FAQ">
+            <h2 class="title">Frequently Asked Questions</h2>
+            <ul class="section" role="list">
+                <li class="question">What is Netflix? </li>
+                <li class="question">How much does Netflix cost? </li>
+                <li class="question">Where can I watch? </li>
+                <li class="question">How do I cancel? </li>
+                <li class="question">What can I watch on Netflix? </li>
+                <li class="question">How does the free trial work? </li>
+            </ul>
+            <h2 class="subtitle">Ready to watch? Enter your email to create or restart your membership.</h2>
+                <form action="/submit" class="form">
+                    <input type="text" placeholder="Email address">
+                    <button class="btn">Try 30 days free</button>
+                </form>
+        </section>
+    </main>
 </body>
 
 </html>
